@@ -29,7 +29,7 @@
 		<h3>Latest Version</h3>
 		<ul>
 			<li>
-				<p><b>TortoiseSVN 1.2.5</b>, built against Subversion 1.2.3. Released 22 October 2005. <br>
+				<p><b>TortoiseSVN 1.2.6</b>, built against Subversion 1.2.3. Released 31 October 2005. <br>
 				Grab it from the <a href="/download.html">download page.</a></p>
 			</li>
 			<li>
